--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 body {
   background-color: green;
+h1 {
+  font-family: "Montserrat", sans-serif;
+}
+
+p {
+  font-family: "Open Sans", sans-serif;
 }
