La til logo i Nav
Jeg la til logo i nav, endret margins for at det skulle passe bedre resten av nettsiden og endret navn på ene tabben fra Kattas Teknologiske Festival til Festivalen.

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,11 +1,12 @@
 nav {
   height: 10vh;
-  margin: 0px 50px;
+  margin: 0px 31vh;
 
   /*   background-color: green;
   border-bottom: 1px solid black; */
 
   align-items: center;
+  font-family: "Montserrat", sans-serif;
 
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -18,9 +19,13 @@ nav a {
   font-size: 1.2em;
 }
 
-.Logo {
+.logo {
   justify-self: start;
   font-weight: bold;
+}
+
+.logo img {
+  height: 7vh;
 }
 
 .Kattas-Teknologiske-Festival {
