Endret bakgrunnsfarge og slider knapper
Endret bakgrunnsfarge, da måtte jeg også endre fargen på sliderknappene.

--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -18,7 +18,7 @@
   top: 50%;
   right: 225px;
   font-size: 3rem;
-  color: #fff;
+  color: #ffb600;
   z-index: 10;
   cursor: pointer;
   user-select: none;
@@ -29,7 +29,7 @@
   top: 50%;
   left: 225px;
   font-size: 3rem;
-  color: #fff;
+  color: #ffb600;
   z-index: 10;
   cursor: pointer;
   user-select: none;
