--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 body {
-  background-color: #cfd2d3;
   background-color: rgb(251, 251, 251);
 }
 
 h1 {
   font-family: "Montserrat", sans-serif;
+  color: #ffb600;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 1.2em;
+  margin: 0 0 3vh 0;
 }
 
 p {
